2010-08-18 Adam Moody <moody20@llnl.gov>

	* makefile,
	  src/pmgr_collective_client.c : Added HAVE_PMI ifdef flag to conditionally
	  compile with PMI calls.

2010-08-17 Adam Moody <moody20@llnl.gov>

	* src/pmgr_collective_client.c : Fixed bug in pmgr_scatter_tree.  Changed
	  pmgr_alltoall to use tree as best as it can.

2010-08-06 Adam Moody <moody20@llnl.gov>

	* src/pmgr_collective_client.c : Added pmgr_check_tree call to check state
	  of tree.  Implements an allreduce using the tree and exits if any process
	  detects a failure.  Created packet protocol for tree, supporting either
	  collective packets or abort packets.

2009-06-15 Adam Moody <moody20@llnl.gov>

	* src/pmgr_collective_common.c : Changed pmgr_malloc error printf from
	  %d to %lu for byte count (bug) and added %m to get reason for failure.

2009-04-16 Adam Moody <moody20@llnl.gov>

	* LICENSE.TXT,
	  src/*,
	  test/client.c : Added BSD license info for open source release.

2008-06-25 Adam Moody <moody20@llnl.gov>

	* src/pmgr_collective_mpirun.c,
	  src.pmgr_collective_client.c : Added static keyword to all variables and
	  functions used within a file to prevent exposing these symbols as external
	  in the library.

2008-06-18 Adam Moody <moody20@llnl.gov>

	* src/pmgr_collective_client.c : Added ability to run as a single-task job
	  if MPIRUN_* variables are not found in environment.  This gives a way
	  to run job serially without needed mpirun or srun.
	  Added scatter tree when scattering from rank 0.
	  Rewrote debug levels so that rank 0 prints for 1-3, ranks 0 and N-1 print
	  for 4-6, and all ranks print for 7-9.
	  At debug level 3, environment variables values are printed to stdout.
	  Added error messages for failed read/write from client to mpirun process.
	  Added error messages for failed read/write to parent and children processes.
	  Creates a psuedo unique id by combining bits from the timestamp seconds and
	  the pid for a 1 task job.
